force-app/main/default/objects/FertilizationPlanner__c/FertilizationPlanner__c.object-meta.xml
<CustomObject>
    <label>Fertilization Planner</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fertilization Planners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>