force-app/main/default/objects/FertilizationPlanner__c/fields/Nitrogen__c.field-meta.xml
<CustomField>
    <fullName>Nitrogen__c</fullName>
    <label>Nitrogen</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>