force-app/main/default/objects/FertilizationPlanner__c/fields/Phosphorus__c.field-meta.xml
<CustomField>
    <fullName>Phosphorus__c</fullName>
    <label>Phosphorus</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>