force-app/main/default/objects/FertilizationPlanner__c/fields/Potassium__c.field-meta.xml
<CustomField>
    <fullName>Potassium__c</fullName>
    <label>Potassium</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>