force-app/main/default/objects/FertilizationPlanner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Day__c</columns>
    <columns>Nitrogen__c</columns>
    <columns>Phosphorus__c</columns>
    <columns>Potassium__c</columns>
    <columns>ScheduleDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>